[package]
authors = ["Alessandro Perazzetta <alessandro.perazzetta@gmail.com>"]
categories = ["development-tools", "development-tools::debugging"]
description = " A crate to easy debug rust code.\n"
documentation = "https://docs.rs/easy-debug/"
exclude = ["docs/**/*"]
keywords = ["debug", "dev", "development"]
license = "MIT OR Apache-2.0"
name = "easy-debug"
readme = "README.md"
repository = "https://github.com/AlessandroPerazzetta/easy-debug"
version = "0.1.0"
edition = "2021"


[dependencies]